--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,54 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+      <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Striped Progress bar</h4>
+            <div class="progress m-t-20">
+              <div  class="progress-bar bg-primary progress-bar-striped active"
+                    style="height:10px;"
+                    role="progressbar"
+                    [style.width]="getPorcentage1">
+              </div>
+            </div>
+
+            <div class="progress m-t-20">
+              <div  class="progress-bar bg-primary progress-bar-striped active"
+                    style="height:10px;"
+                    role="progressbar"
+                    [style.width]="getPorcentage2">
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-counter
+          [value]="progress1"
+          (outputValue)="progress1 = $event">
+        </app-counter>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-counter
+          [btnClass]="'btn-info'"
+          [value]="progress2"
+          (outputValue)="progress2 = $event">
+        </app-counter>
+
+      </div>
+    </div>
+  </div>
+</div>
+
