--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,16 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <app-donut
+      title="ventas"
+      [dataConfig]="chartData"
+      >
+    </app-donut>
+  </div>
+  <div class="col-6">
+    <app-donut
+    title="Compras"
+    [dataConfig]="chartData2"
+    >
+  </app-donut>
+  </div>
+</div>
